hphp/hack/test/typecheck/const_collections/const_varray_modify.php
<?hh // strict

const varray<int> DATA = vec[42];

function main(): void {
    DATA[1] = -1;
}
